--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -42,11 +42,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IPoint.cs" />
-    <Compile Include="IRectangle.cs" />
-    <Compile Include="Point.cs" />
+    <Compile Include="Factories\IShapeFactory.cs" />
+    <Compile Include="Factories\ShapeFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rectangle.cs" />
+    <Compile Include="Shapes\ILine.cs" />
+    <Compile Include="Shapes\IPoint.cs" />
+    <Compile Include="Shapes\IRectangle.cs" />
+    <Compile Include="Shapes\Line.cs" />
+    <Compile Include="Shapes\Point.cs" />
+    <Compile Include="Shapes\Rectangle.cs" />
+    <Compile Include="vanBrackel.Rectangles.Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>vanBrackel.Rectangles.Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="vanBrackel.Rectangles.Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>vanBrackel.Rectangles.Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
